<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/newbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dicee_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_leftDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/dice2" />

        <ImageView
            android:id="@+id/image_rightDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/dice1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/hitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5sp"
            android:background="@color/buttonBlue"
            android:text="@string/hit_button_text"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/dealerPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5sp"
            android:layout_marginRight = "5sp"
            android:layout_marginLeft = "5sp"
            android:background="@color/buttonBlue"
            android:text="@string/dealer_play_button_text"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/standButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@color/buttonBlue"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/stand_button_text"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/doubleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@color/buttonBlue"
            android:text="@string/double_button_text"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/playerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/player_score_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/dealerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/dealer_score_text"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/betTextView"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/bet_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/betEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="number"
            android:textSize="24sp"
            android:text="@string/preset_bet"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/currentTurn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/current_turn_text"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <Button
            android:id="@+id/quitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonBlue"
            android:text="@string/quit_button_text"
            android:textColor="@android:color/background_light"/>
    </LinearLayout>

</LinearLayout>